# Peekdown

./: .gitignore  Cargo.toml  installer.iss
.github/workflows/: build.yml
src/: i18n.rs  ipc.rs  main.rs  state.rs
src/frontend/: app.js  tabs.js
