[package]
name = "peekdown"
version = "1.2.1"
edition = "2021"

[dependencies]
wry = "0.49"
tao = "0.33"
webview2-com = "0.35"
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
dirs = "6"
percent-encoding = "2"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "none"
